--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -105,13 +105,13 @@ Plot a set of realisations from the prior seasonal smooth function
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
 plot(lynx_mvgam_prior, type = 'smooths', realisations = TRUE)
 ```
-These functions are showing the marginal contribution of the seasonal smooth function to the linear predictor (on the `log` scale), so they are clearly allowed to move into ridiculous spaces that we should give **very** little prior plausibility to:
+These functions are showing the marginal contribution of the seasonal smooth function to the linear predictor (on the log scale), and they are clearly allowed to move into ridiculous spaces that we should give very little prior plausibility to:
 ```{r}
 exp(-25)
 exp(25)
 ```
 
-Setting `k` to a smaller value results in less flexibility as the number of basis functions that contribute to the functional behaviour is reduced
+Setting `k` to a smaller value results in less flexibility, as the number of basis functions that contribute to the functional behaviour is reduced
 ```{r, message=FALSE, warning=FALSE}
 lynx_mvgam_prior <- mvgam(data_train = lynx_train,
                data_test = lynx_test,
@@ -128,7 +128,7 @@ Resulting prior realisations look more reasonable given the range of the observa
 plot(lynx_mvgam_prior, type = 'smooths', realisations = TRUE)
 ```
 
-In practice, imparting domain knowledge into prior specifications for smooth functions is challenging, as these behaviours are often the cumulative result of multiple penalty matrices that all have their own separate smoothing parameters. Changing the prior on the smoothing parameters is an option but without running through prior visualisations (and other prior pushforward checks), it will be more difficult to reason about how to set `k` to respect domain knowledge. We can now condition the model on observed data in `Stan` using MCMC sampling with the `Cmdstan` interface (installation links for `rstan` and `cmdstanr` are found [here](https://mc-stan.org/users/interfaces/rstan) and [here](https://mc-stan.org/cmdstanr/articles/cmdstanr.html)).
+In practice, imparting domain knowledge into prior specifications for penalised smooth functions is challenging, as these behaviours are often the cumulative result of multiple penalty matrices that all have their own separate smoothing parameters. Changing the prior on the smoothing parameters is another option (`mvgam` uses an expontenial(0.05) prior by default, which tends to regularise functions to be more smooth compared to default approaches used in `mgcv::jagam`), but without running through prior visualisations (and other prior pushforward checks) it will be more difficult to reason about how to set `k` to respect domain knowledge. In general it is highly recommended that users view `mvgam` and related interfaces such as `brms` as tools for building scaffold models that can then be modified to suit the bespoke needs of each particular analysis. But for now, we will proceed by conditioning the model on observed data in `Stan` using MCMC sampling with the `Cmdstan` interface (installation links for `rstan` and `cmdstanr` are found [here](https://mc-stan.org/users/interfaces/rstan) and [here](https://mc-stan.org/cmdstanr/articles/cmdstanr.html)).
 ```{r, message=FALSE, warning=FALSE}
 lynx_mvgam <- mvgam(data_train = lynx_train,
                data_test = lynx_test,
